# usb-info

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: device.rs  error.rs  formatter.rs  lib.rs  main.rs  path.rs  tree.rs
